add: more swagger docs
