# docs/swagger.json
@@ -57,6 +57,12 @@
                         "schema": {
                             "$ref": "#/definitions/dto.AreaDetailed"
                         }
+                    },
+                    "400": {
+                        "description": "Validation body error",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
                     }
                 }
             }
@@ -93,6 +99,12 @@
                         "schema": {
                             "$ref": "#/definitions/dto.Camera"
                         }
+                    },
+                    "400": {
+                        "description": "Validation body error",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
                     }
                 }
             }
@@ -126,6 +138,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.Camera"
+                        }
+                    },
+                    "400": {
+                        "description": "Wrong query params",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
+                    },
+                    "404": {
+                        "description": "Entity not found",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
                         }
                     }
                 }
@@ -168,6 +192,18 @@
                         "schema": {
                             "$ref": "#/definitions/dto.Camera"
                         }
+                    },
+                    "400": {
+                        "description": "Validation body error",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
+                    },
+                    "404": {
+                        "description": "Entity not found",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
                     }
                 }
             }
@@ -196,6 +232,18 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "400": {
+                        "description": "Wrong query params",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
+                    },
+                    "404": {
+                        "description": "Entity not found",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
                     }
                 }
             }
@@ -222,6 +270,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.AreaDetailed"
+                        }
+                    },
+                    "400": {
+                        "description": "Wrong query params",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
+                    },
+                    "404": {
+                        "description": "Entity not found",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
                         }
                     }
                 }
@@ -257,6 +317,18 @@
                         "schema": {
                             "$ref": "#/definitions/dto.AreaDetailed"
                         }
+                    },
+                    "400": {
+                        "description": "Validation body error",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
+                    },
+                    "404": {
+                        "description": "Entity not found",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
                     }
                 }
             },
@@ -276,6 +348,18 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "400": {
+                        "description": "Wrong query params",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
+                    },
+                    "404": {
+                        "description": "Entity not found",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
                     }
                 }
             }
@@ -298,19 +382,24 @@
                     }
                 },
                 "created_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-04-06T03:42:06.553269Z"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 123
                 },
                 "is_active": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": true
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Perm"
                 },
                 "updated_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-04-06T03:42:06.553269Z"
                 }
             }
         },
@@ -324,19 +413,24 @@
                     }
                 },
                 "created_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-04-06T03:42:06.553269Z"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 123
                 },
                 "is_active": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": true
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Perm"
                 },
                 "updated_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-04-06T03:42:06.553269Z"
                 }
             }
         },
@@ -344,43 +438,56 @@
             "type": "object",
             "properties": {
                 "altitude": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 27.8
                 },
                 "angle": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 30.5
                 },
                 "area_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "created_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-04-06T03:42:06.553269Z"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 },
                 "ip": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "127.0.0.1"
                 },
                 "is_active": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": true
                 },
                 "latitude": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 27.123454
                 },
                 "longitude": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 30.123456
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Enter"
                 },
                 "radius": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 10.5
                 },
                 "sector_angle": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 15.25
                 },
                 "updated_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2025-04-06T03:42:06.553269Z"
                 }
             }
         },
@@ -462,6 +569,14 @@
                     "type": "number",
                     "maximum": 359,
                     "minimum": 0
+                }
+            }
+        },
+        "model.CustomError": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         },
